--- a/Instructions/Labs/AZ-204_lab_01.md
+++ b/Instructions/Labs/AZ-204_lab_01.md
@@ -95,7 +95,7 @@ In this lab, you will explore how to create a web application on Azure by using 
 
 #### Task 3: Upload a sample blob
 
-1. On the **Storage Account** blade, under settings select **Configuration** change **Allow Blob anonymous access** disabled to **Enabled**.
+1. On the **Storage Account** blade, under settings select **Configuration** change **Allow Blob anonymous access** disabled to **Enabled**. Click on **Save**
 
 1. On the **Storage Account** blade, in the **Data storage** section, select the **Containers** link.
 
