--- a/Instructions/Labs/AZ-204_lab_01.md
+++ b/Instructions/Labs/AZ-204_lab_01.md
@@ -130,7 +130,7 @@ In this lab, you will explore how to create a web application on Azure by using 
 
 1. On the **Marketplace** search results blade, select the **Web App** result.
 
-1. On the **Web App** blade, select **Create**.
+1. On the **Web App** blade, select **Create** fropdown and select **webapp**.
 
 1. On the **Create Web App** blade, on the **Basics** tab, perform the following actions, and then select the **Monitoring** tab:
 
