--- a/Instructions/Labs/AZ-204_lab_01.md
+++ b/Instructions/Labs/AZ-204_lab_01.md
@@ -171,7 +171,7 @@ In this lab, you will explore how to create a web application on Azure by using 
     | **Application settings** tab | Select **New application setting** |
     | **Add/Edit application setting** pop-up dialog | In the **Name** text box, enter **StorageConnectionString** |
     | **Value** text box | Paste the storage connection string that you previously copied to Notepad |
-    | **Deployment slot setting** check box | Retain the default value, and then select **OK** to close the pop-up dialog and return to the **Configuration** section |
+    | **Deployment slot setting** check box | Retain the default value, and then select **OK** to close the pop-up dialog and return to the **Configuration** section and click on **save**|
 
     Wait for your application settings to save before you continue with the lab.
 
