--- a/Instructions/Labs/AZ-204_lab_01.md
+++ b/Instructions/Labs/AZ-204_lab_01.md
@@ -141,17 +141,17 @@ In this exercise, you will crate a web app in Azure and then deploy your ASP.NET
 
 1. On the **Create Web App** blade, on the **Basics** tab, perform the following actions, and then select **Next: Deployment**:
 
-    | Setting                         | Action                                                       |
-    | ------------------------------- | ------------------------------------------------------------ |
-    | **Subscription** drop-down list | Retain the default value.                                    |
-    | **Resource group** section      | Select **ManagedPlatform-<inject key="DeploymentID" enableCopy="false"/>** |
-    | **Name** text box | Enter **imgapi<inject key="DeploymentID" enableCopy="false"/>** |
-    | **Publish** section | Select **Code** |
-    | **Runtime stack** drop-down list | Select **.NET 6 (LTS)** |
-    | **Operating System** section       | Select **Windows**                                         |
-    | **Region** drop-down list          | Select the **East US** region                              |
-    | **Windows Plan (East US)** section | Select **Create new**, enter the value **ManagedPlan** in the **Name** text box, and then select **OK**. |
-    | **Pricing Plan** section           | Retain the default value.                                    |
+   | Setting | Action |
+   | --- | --- |
+   | **Subscription** drop-down list    | Retain the default value |
+   | **Resource group** section         | Select **ManagedPlatform** |
+   | **Name** text box                  | Enter **imgapi**_[yourname]_ |
+   | **Publish** section                | Select **Code**  |
+   | **Runtime stack** drop-down list   | Select **.NET 6 (LTS)** |
+   | **Operating System** section       | Select **Windows**  |
+   | **Region** drop-down list          | Select the **East US** region  |
+   | **Windows Plan (East US)** section | Select **Create new**, enter the value **ManagedPlan** in the **Name** text box, and then select **OK** |
+   | **Pricing plan** section | Select **Standard S1** |
 
     The following screenshot displays the configured settings on the **Create web app** blade.
 
