--- a/Instructions/Labs/AZ-204_lab_07.md
+++ b/Instructions/Labs/AZ-204_lab_07.md
@@ -93,27 +93,27 @@ In this exercise, you create all the resources that you'll use in this lab.
 
 1. In the Azure portal, use the **Search resources, services, and docs** text box to search for **Key vaults**, and then in the list of results, select **Key vaults**.
 
-2. On the **Key vaults** blade, select **Create**.
+1. On the **Key vaults** blade, select **Create**.
 
-3. On the **Create key vault** blade, on the **Basics** tab, perform the following actions, and then select **Review + create**:
+1. On the **Create key vault** blade, on the **Basics** tab, perform the following actions, and then select **Access Configuration** tab:
 
-   | Setting                           | Action                                    |
-   | --------------------------------- | ----------------------------------------- |
-   | **Subscription** drop-down list   | Retain the default value.                 |
-   | **Resource group** drop-down list | Select **ConfidentialStack-<inject key="DeploymentID" enableCopy="false"/>** in the list. |
-   | **Key vault name** text box       | Enter **securevault<inject key="DeploymentID" enableCopy="false"/>**        |
-   | **Region** drop-down list         | Select **East US**.                       |
-   | **Pricing tier** drop-down list   | select **Standard**.                      |
+   | Setting | Action |
+   | -- | -- |
+   | **Subscription** drop-down list | Retain the default value |
+   | **Resource group** drop-down list | Select **ConfidentialStack** in the list |
+   | **Key vault name** text box | Enter **securevault**_[yourname]_ |
+   | **Region** drop-down list | Select **East US** |
+   | **Pricing tier** drop-down list | Select **Standard** |
 
    The following screenshot displays the configured settings on the **Create key vault** blade.
 
-   ![Screenshot displaying the configured settings on the Create key vault blade](./media/az-204_09-createKeyVault1.png)
+   ![Screenshot displaying the configured settings on the Create key vault blade](./media/l07_create_key_vault.png)
+   
+1. On the **Access Configuration** tab, change the permission model to **Vault access policy**.
 
-4. Navigate to the **Access Configuration** tab and change the permission model to **Vault access policy**.
+1. Select the **Review + create** tab, review the options that you selected during the previous steps.
 
-5. On the **Review + create** tab, review the options that you selected during the previous steps.
-
-6. Select **Create** to create the key vault by using your specified configuration.
+1. Select **Create** to create the key vault by using your specified configuration.
 
     > **Note**: Wait for the creation task to complete before you move forward with this lab.
 
